parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_assignment-5.snap
---
source: parser/src/parser/parser.rs
description: a = 1j
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 6,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 6,
                        },
                        value: Complex {
                            real: "0",
                            imaginary: "1j",
                        },
                    },
                ),
            },
        ),
    ],
}
