parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_assignment-8.snap
---
source: parser/src/parser/parser.rs
description: "a = br'1'"
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 9,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 9,
                        },
                        value: [49],
                    },
                ),
            },
        ),
    ],
}
