parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_bool_op-4.snap
---
source: parser/src/parser/parser.rs
description: a and b or c
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            BoolOp(
                BoolOperation {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    op: Or,
                    values: [
                        BoolOp(
                            BoolOperation {
                                node: Node {
                                    start: 0,
                                    end: 7,
                                },
                                op: And,
                                values: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 0,
                                                end: 1,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 6,
                                                end: 7,
                                            },
                                            id: "b",
                                        },
                                    ),
                                ],
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 11,
                                    end: 12,
                                },
                                id: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
