parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_call-2.snap
---
source: parser/src/parser/parser.rs
description: a(b)
---
Module {
    node: Node {
        start: 0,
        end: 4,
    },
    body: [
        ExpressionStatement(
            Call(
                Call {
                    node: Node {
                        start: 0,
                        end: 4,
                    },
                    func: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    args: [
                        Name(
                            Name {
                                node: Node {
                                    start: 2,
                                    end: 3,
                                },
                                id: "b",
                            },
                        ),
                    ],
                    keywords: [],
                    starargs: None,
                    kwargs: None,
                },
            ),
        ),
    ],
}
